--- a/addons/openerp/static/css/style.css
+++ b/addons/openerp/static/css/style.css
@@ -552,7 +552,7 @@ td.item input.reference {
 
 td.item img.m2o_select,
 td.item img.datetime {
-    margin-left: -21px;
+    margin-left: -18px;
 }
 
 img.m2o_select,
